--- a/cas-management-webapp/src/main/resources/templates/fragments/serviceform/multiAuthPane.html
+++ b/cas-management-webapp/src/main/resources/templates/fragments/serviceform/multiAuthPane.html
@@ -36,7 +36,7 @@ Providers: CSV list
                     <i class="fa fa-lg fa-question-circle form-tooltip-icon"
                        data-toggle="tooltip"
                        data-placement="top"
-                       th:title="#{services.form.tooltip.multiAuth.failureMode}"></i>
+                       th:title="#{services.form.tooltip.multiauth.failuremode}"></i>
                 </label>
                 <div class="col-sm-8">
 
