--- a/cas-server-webapp/src/main/resources/templates/monitoring/viewDashboard.html
+++ b/cas-server-webapp/src/main/resources/templates/monitoring/viewDashboard.html
@@ -58,7 +58,7 @@
                         </form>
                     </li>
                     <li>
-                        <form method="post" th:action="${refreshEndpoint}">
+                        <form th:method="${refreshMethod}" th:action="${refreshEndpoint}">
                             <button class="btn btn-refresh"
                                 type="button"
                                 data-toggle="modal"
