--- a/stylesheets/stylesheet.scss
+++ b/stylesheets/stylesheet.scss
@@ -11,6 +11,7 @@ by Jason Costello, @jsncostello
 html, body {
   font-family: 'Lato', sans-serif;
   height: 100%;
+  background: #333;
 }
 
 header {
