--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,10 +48,10 @@
 
                         <div class="row">
                             <!-- MAIN CONTENT -->
-                            <div id="dev-doc-info" class="alert alert-danger" role="alert"><strong>Work in progress</strong>
+                            <div id="dev-doc-info" class="alert alert-danger" role="alert"><strong>WORKERS AHEAD!</strong>
                                 <p>You are viewing the development documentation for the CAS server. <strong>The
                                     functionality presented
-                                    here is not officially released yet and may be unstable</strong>.
+                                    here <a href="https://github.com/apereo/cas/milestones">is not officially released yet</a> and may be unstable</strong>.
                                     This is a work in progress and will be continually updated as development makes
                                     progress. To view
                                     the documentation for a specific CAS server version, please <a
