Updated logs and UI

--- a/cas-management-webapp/src/main/resources/templates/fragments/footer.html
+++ b/cas-management-webapp/src/main/resources/templates/fragments/footer.html
@@ -6,13 +6,13 @@
                 <li><a href="https://www.apereo.org/cas" 
                        rel="_blank" th:text="#{footer.homePage}"/></li>
                 
-                <li><a href="https://jasig.github.io/cas" 
+                <li><a href="https://apereo.github.io/cas" 
                        rel="_blank" th:text="#{footer.wiki}"/></li>
                 
-                <li><a href="https://github.com/Jasig/cas/issues" 
+                <li><a href="https://github.com/apereo/cas/issues" 
                        rel="_blank" th:text="#{footer.issueTracker}" /></li>
                 
-                <li><a href="https://jasig.github.io/cas/Mailing-Lists.html" rel="_blank" th:text="#{footer.mailingLists}"/></li>
+                <li><a href="https://apereo.github.io/cas/Mailing-Lists.html" rel="_blank" th:text="#{footer.mailingLists}"/></li>
             </ul>
             <div class="copyright">
                 <p>
