--- a/cas-management-webapp/src/main/resources/templates/fragments/header.html
+++ b/cas-management-webapp/src/main/resources/templates/fragments/header.html
@@ -5,7 +5,7 @@
             <div class="navbar-header">
                 <a href="manage.html" target="_self" id="homepageUrlLink">
                     <div class="navbar-brand">
-                        <img th:src="@{/images/logo_cas.png}" alt="Jasig CAS logo" />
+                        <img th:src="@{/images/logo_cas.png}" alt="apereo CAS logo" />
                     </div>
                     <h4 th:text="#{management.services.header.apptitle}"/>
                 </a>
