--- a/cas-server-webapp/src/main/resources/templates/protocol/3.0/casServiceValidationSuccess.html
+++ b/cas-server-webapp/src/main/resources/templates/protocol/3.0/casServiceValidationSuccess.html
@@ -10,5 +10,14 @@
                 <div th:utext="${attr}" th:remove="tag" />
             </div>
         </cas:attributes>
+        <%-- 自己添加的，client可以获得属性 start --%>
+        <c:if test="${fn:length(assertion.chainedAuthentications[fn:length(assertion.chainedAuthentications)-1].principal.attributes) > 0}">
+            <cas:attributes>
+                <c:forEach var="attr" items="${assertion.chainedAuthentications[fn:length(assertion.chainedAuthentications)-1].principal.attributes}">
+                    <cas:${fn:escapeXml(attr.key)}>${fn:escapeXml(attr.value)}</cas:${fn:escapeXml(attr.key)}>
+                </c:forEach>
+            </cas:attributes>
+        </c:if>
+     	<%-- 自己添加的，client可以获得属性 end --%>
     </cas:authenticationSuccess>
 </cas:serviceResponse>
