--- a/cas-server-webapp/src/main/resources/templates/layout.html
+++ b/cas-server-webapp/src/main/resources/templates/layout.html
@@ -15,6 +15,7 @@
 
     <link rel="icon" th:href="@{/favicon.ico}" type="image/x-icon"/>
 
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/zxcvbn/4.3.0/zxcvbn.js"></script>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
