--- a/cas-server-webapp/src/main/resources/templates/casExpiredPassView.html
+++ b/cas-server-webapp/src/main/resources/templates/casExpiredPassView.html
@@ -9,7 +9,7 @@
 <div layout:fragment="content">
     <div class="alert alert-danger">
         <h2 th:utext="#{screen.expiredpass.heading}"/>
-        <p th:utext="#{screen.expiredpass.message(${passwordPolicyUrl})}"/>
+        <p th:utext="#{screen.expiredpass.message}"/>
     </div>
 </div>
 </body>
