--- a/cas-server-webapp/src/main/resources/templates/casMustChangePassView.html
+++ b/cas-server-webapp/src/main/resources/templates/casMustChangePassView.html
@@ -3,59 +3,58 @@
 
 <head th:inline="text">
     <title>[[#{screen.mustchangepass.heading}]]</title>
-
-    <script>
-        function jqueryReady() {
-            var strength = {
-                0: "Worst ☹",
-                1: "Bad ☹",
-                2: "Weak ☹",
-                3: "Good ☺",
-                4: "Strong ☻"
-            }
-
-            var password = document.getElementById('password');
-            var meter = document.getElementById('password-strength-meter');
-            var text = document.getElementById('password-strength-text');
-
-            password.addEventListener('input', function () {
-                var val = password.value;
-                var result = zxcvbn(val);
-
-                // Update the password strength meter
-                meter.value = result.score;
-
-                // Update the text indicator
-                if (val !== "") {
-                    text.innerHTML = "Strength: " + strength[result.score];
-                } else {
-                    text.innerHTML = "";
-                }
-            });
-        }
-    </script>
+    <script type="text/javascript" th:src="@{/js/pm.js}"></script>
 </head>
 
 <body id="cas">
 <div layout:fragment="content">
-    <div class="alert alert-danger">
+    <div class="alert alert-info">
         <h2 th:utext="#{screen.mustchangepass.heading}"/>
-        <p th:utext="#{screen.mustchangepass.message}"/>
+        <p/>
+        <br/>
 
+        <form>
         <p>
-            <label for="password">Enter password:</label>
-            <input class="required" type="password" id="password"/>
+        <table>
+            <tr>
+                <td class="pm">
+                    <label for="password">Enter password:</label>
+                </td>
+                <td class="pm">
+                    <input class="required" type="password" id="password"/>
+                </td>
+            </tr>
+            <tr>
+                <td class="pm">
+                    <label for="confirmpassword">Confirm password:</label>
+                </td>
+                <td class="pm">
+                    <input class="required" type="password" id="confirmpassword"/>
+                </td>
+            </tr>
 
-            <label for="confirmpassword">Confirm password:</label>
-            <input class="required" type="password" id="confirmpassword"/>
+        </table>
 
-        </p>
-
-        <p>
+        <div>
+            <br/>
             <meter max="4" id="password-strength-meter"/>
-        <p id="password-strength-text"/>
+            <p id="password-strength-text"/>
+        </div>
         </p>
 
+        <input class="btn btn-success"
+               name="submit"
+               accesskey="s"
+               th:value="#{screen.pm.button.submit}"
+               type="submit"/>
+            <input
+                    class="btn-reset"
+                    name="cancel"
+                    accesskey="c"
+                    th:value="#{screen.pm.button.cancel}"
+                    type="button"
+                    onclick="location.href = location.href;" />
+        </form>
     </div>
 </div>
 </body>
