--- a/cas-server-webapp/src/main/resources/templates/fragments/bottom.html
+++ b/cas-server-webapp/src/main/resources/templates/fragments/bottom.html
@@ -1,4 +1,4 @@
-<script src="https://cdnjs.cloudflare.com/ajax/libs/headjs/1.0.3/head.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/headjs/1.0.3/head.min.js"></script>
 <script type="text/javascript" th:src="@{${#themes.code('cas.javascript.file')}}"></script>
 
 
