--- a/_includes/mobilenavbar.html
+++ b/_includes/mobilenavbar.html
@@ -19,12 +19,10 @@
             <li class="nav-item"><a
                     href="https://www.google.com/cse/publicurl?cx=017040929083740828958:sqr2hwvrxmg"
                     class="nav-link">Search</a></li>
-            <li class="nav-item"><a href="{{ relative }}Support.html" class="nav-link">Support</a>
-            </li>
-            <li class="nav-item"><a href="{{ relative }}Mailing-Lists.html" class="nav-link">Mailing
-                Lists</a></li>
-            <li class="nav-item"><a href="{{ relative }}Older-Versions.html" class="nav-link">Versions</a>
-            </li>
+            <li class="nav-item"><a href="{{ relative }}Support.html" class="nav-link">Support</a></li>
+            <li class="nav-item"><a href="{{ relative }}Mailing-Lists.html" class="nav-link">Mailing Lists</a></li>
+            <li class="nav-item"><a href="{{ relative }}Older-Versions.html" class="nav-link">Versions</a></li>
+            <li class="nav-item"><a href="https://mmoayyed.github.io" target="_blank" class="nav-link">Blog</a></li>
         </ul>
     </nav>
     <!-- /top nav -->
