--- a/cas-server-webapp/src/main/resources/templates/error/401.html
+++ b/cas-server-webapp/src/main/resources/templates/error/401.html
@@ -20,10 +20,10 @@
             <p/>
             <p>We are sorry. You do not have permission to view this page.</p>
             <br/>
-            <p>Maybe you are just unfortunate today. Maybe it's just not your day. Maybe you're just not feeling well. Maybe. But one 
-                thing is for certain. Whatever it is, you are not getting in.</p>
+            <p>Maybe you're just unfortunate today. Maybe it's just not your day. Maybe you're just not feeling well. Maybe. So much 
+                uncertainty, so much doubt. But you know, in these times of anguish and confusion, one thing is for certain:</p>
             <br/>
-            <p>Sorry.</p>
+            <p>You are not getting in.</p>
 
             <br/>
             <p>In closing, <a href="/login">go away</a>. </p>
