Fixed up the UI

--- a/cas-server-webapp/src/main/resources/templates/error/404.html
+++ b/cas-server-webapp/src/main/resources/templates/error/404.html
@@ -15,8 +15,7 @@
 <body id="cas">
 <div layout:fragment="content">
     <div class="alert alert-info">
-        <h2 class="prompt">THESE ARE NOT THE PAGES YOU ARE LOOKING FOR!
-            <img width="32" height="32" align="right" src="/cas/images/banana.gif"/></h2>
+        <h2 class="prompt">THESE ARE NOT THE PAGES YOU ARE LOOKING FOR!</h2>
         <div class="prompt">
             <p/>
             <p>Really? 404? In this day and age? <strong>REALLY?!</strong></p>
