Cleaned up tests

--- a/cas-server-webapp/src/main/resources/templates/fragments/loginform.html
+++ b/cas-server-webapp/src/main/resources/templates/fragments/loginform.html
@@ -59,6 +59,13 @@
                 <p/>
             </div>
         </section>
+
+        <section class="row" th:if="${passwordManagementEnabled}">
+            <div>
+                <input type="button" th:value="#{screen.pm.button.forgotpwd}" />
+                <p/>
+            </div>
+        </section>
         
         <section class="row" th:if="${recaptchaSiteKey}">
             <div>
