--- a/cas-server-webapp/src/main/resources/templates/monitoring/viewDashboard.html
+++ b/cas-server-webapp/src/main/resources/templates/monitoring/viewDashboard.html
@@ -13,33 +13,33 @@
             <div class="app-launcher">
                 <h1 th:inline="text"><i class="fa fa-dashboard"></i>[[#{cas.dashboard.section.dashboard.title}]]</h1>
                 <ul>
-                    <li><a href="/cas/status">Status</a></li>
-                    <li><a href="/cas/status/logging">Logging</a></li>
-                    
+                    <li><a th:href="@{/status}">Status</a></li>
+                                        
                     <li th:if="${actuatorEndpointsEnabled}">
-                        <a href="/cas/status/autoconfig" class="casTooltip">
+                        <a th:href="@{/status/autoconfig}" class="casTooltip">
                             Auto Configuration
                             <span class="tooltiptext" th:text="#{cas.dashboard.tooltip.autoconfiguration}"></span>
                         </a>
                     </li>
-                    <li th:if="${actuatorEndpointsEnabled}"><a href="/cas/status/beans">Beans</a></li>
-                    <li th:if="${actuatorEndpointsEnabled}"><a href="/cas/status/mappings">Endpoint Mappings</a></li>
-                    <li th:if="${actuatorEndpointsEnabled}"><a href="/cas/status/configprops">Configuration Properties</a></li>
-                    <li th:if="${actuatorEndpointsEnabled}"><a href="/cas/status/dump">Thread Dump</a></li>
-                    <li th:if="${actuatorEndpointsEnabled}"><a href="/cas/status/env">Environment</a></li>
-                    <li th:if="${actuatorEndpointsEnabled}"><a href="/cas/status/health">Health</a></li>
-                    <li th:if="${actuatorEndpointsEnabled}"><a href="/cas/status/info">Info</a></li>
-                    <li th:if="${actuatorEndpointsEnabled}"><a href="/cas/status/metrics">Metrics</a></li>
-                    <li><a href="/cas/status/stats">Statistics Panel</a></li>
-                    <li><a href="/cas/status/config">Configuration Panel</a></li>
-                    <li><a href="/cas/status/ssosessions">SSO Sessions</a></li>
+                    <li th:if="${actuatorEndpointsEnabled}"><a th:href="@{/status/beans}">Beans</a></li>
+                    <li th:if="${actuatorEndpointsEnabled}"><a th:href="@{/status/mappings}">Endpoint Mappings</a></li>
+                    <li th:if="${actuatorEndpointsEnabled}"><a th:href="@{/status/configprops}">Configuration Properties</a></li>
+                    <li th:if="${actuatorEndpointsEnabled}"><a th:href="@{/status/dump}">Thread Dump</a></li>
+                    <li th:if="${actuatorEndpointsEnabled}"><a th:href="@{/status/env}">Environment</a></li>
+                    <li th:if="${actuatorEndpointsEnabled}"><a th:href="@{/status/health}">Health</a></li>
+                    <li th:if="${actuatorEndpointsEnabled}"><a th:href="@{/status/info}">Info</a></li>
+                    <li th:if="${actuatorEndpointsEnabled}"><a th:href="@{/status/metrics}">Metrics</a></li>
+                    <li><a th:href="@{/status/stats}">Statistics Panel</a></li>
+                    <li><a th:href="@{/status/config}">Configuration Panel</a></li>
+                    <li><a th:href="@{/status/ssosessions}">SSO Sessions</a></li>
+                    <li><a th:href="@{/status/logging}">Logging</a></li>
                 </ul>
             </div>
             <div class="app-launcher server-config">
                 <h1 th:inline="text"><i class="fa fa-cogs"></i>[[#{cas.dashboard.section.configuration.title}]]</h1>
                 <ul class="configserver">
-                    <li th:if="${isDefaultProfile}"><a href="/cas/configserver/cas/default">Default Profile</a></li>
-                    <li th:if="${isNativeProfile}"><a href="/cas/configserver/cas/native">Native Profile</a></li>
+                    <li th:if="${isDefaultProfile}"><a th:href="@{/configserver/cas/default}">Default Profile</a></li>
+                    <li th:if="${isNativeProfile}"><a th:href="@{/configserver/cas/native}">Native Profile</a></li>
                 </ul>
             </div>
 
@@ -47,7 +47,7 @@
                 <h1 th:inline="text"><i class="fa fa-server"></i>[[#{cas.dashboard.section.server.functions.title}]]</h1>
                 <ul>
                     <li th:if="${restartEndpointEnabled}">
-                        <form method="post" action="/cas/status/restart">
+                        <form method="post" th:action="@{/status/restart}">
                             <button class="btn btn-restart"
                                 type="button"
                                 data-toggle="modal"
@@ -73,7 +73,7 @@
                         </form>
                     </li>
                     <li th:if="${shutdownEndpointEnabled}">
-                        <form method="post" action="/cas/status/shutdown">
+                        <form method="post" th:action="/status/shutdown">
                             <button type="button" class="btn btn-shutdown"
                                 data-toggle="modal"
                                 data-target="#myModal"
