--- a/cas-server-webapp/src/main/resources/templates/monitoring/viewLoggingConfig.html
+++ b/cas-server-webapp/src/main/resources/templates/monitoring/viewLoggingConfig.html
@@ -10,7 +10,8 @@
 
         var urls = {
             getConfiguration: /*[[@{/status/logging/getConfiguration}]]*/ ,
-            updateLevel: /*[[@{/status/logging/updateLoggerLevel}]]*/ 
+            updateLevel: /*[[@{/status/logging/updateLoggerLevel}]]*/  ,
+            logOutput: /*[[@{/logoutput}]]*/
         };
         
         /*]]>*/
