--- a/cas-server-webapp/src/main/resources/templates/monitoring/viewSsoSessions.html
+++ b/cas-server-webapp/src/main/resources/templates/monitoring/viewSsoSessions.html
@@ -5,12 +5,6 @@
     <title>[[#{cas.ssosessions.report.pagetitle}]]</title>
 </head>
 
-<!--
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-
-<div th:replace="fragments/top"/>
--->
 <body id="cas">
 <div layout:fragment="content">
     <div id="content">
@@ -22,7 +16,7 @@
                         "//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css",
                         "//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css",
                         "//cdn.datatables.net/1.10.9/css/dataTables.bootstrap.min.css",
-                        "/cas/css/ssosessions.css"
+                        /*[[@{/css/ssosessions.css}]]*/
                 );
 
                 head.load(
@@ -31,7 +25,7 @@
                         // Bootstrap Datatables
                         "//cdn.datatables.net/1.10.9/js/jquery.dataTables.min.js",
                         "//cdn.datatables.net/1.10.9/js/dataTables.bootstrap.min.js",
-                        "/cas/js/ssosessions.js"
+                        /*[[@{/js/ssosessions.js}]]*/
                 );
             }
 
